MDEV-18187 Fix repairing of encrypted tables

Pages in file are allocated in non-linear order. For example, after
having N pages, server could write page N+99, then N+98, etc. When it
writes page N+99, file will have a gap between N and N+99. Depending
on the OS and filesystem, the gap will either be filled with zeroes,
or it will contain some previous disk contents. Modern OSes will have
zeroes.

If server process crashes before it flushes pages in the gap, these
pages will remain as is.

When attempting to decrypt such pages, decryption failed due to
unexpected 0 in one of header fields. This resulted in permanent
failure to repair tables, as well as permanent failure to start server.

Fix this by "decrypting" all-zeroes to all-zeroes. This removes
encryption from the equation. The code for non-encrypted tables can
already handle such cases well.

Note that without encryption, these functions are used for
`file.post_read_hook`:
  MAD files: `maria_page_crc_check_bitmap()`
    Note that it uses "bitmap" hook instead of "data" hook.
	This is a result of Aria using bitmap file = data file.
  MAI files: `maria_page_crc_check_index()`

Therefore, in order to follow the "non-encrypted" path, the following
needs to happen:
  1. Fill decrypted buffer with zeroes
  2. Call appropriate hook

This patch adds (1) while (2) is already there.

Note that `ma_crypt_data_post_read_hook()` calls "data" hook instead of
"bitmap" hook though. The difference is that it will NOT succeed on
all-zeroes page. I understand that the fact that non-encrypted path
uses "bitmap" hook for data files is in fact a bug. I understand that
returning success for a data file block that was not written to disk is
bad, returning `HA_ERR_WRONG_CRC` sounds better. Therefore, for the
purposes of this patch, it's ok that `ma_crypt_data_post_read_hook()`
calls the "data" hook in the end.

Also fix potential underflow in `ma_crypt_index_post_read_hook()` when
calculating `size` when `page_used < share->keypage_header` due to
corrupted page data.